@@ -99,7 +99,9 @@ Skills:
             # MaxBonusLevel: On this level or higher, the dodge chance will not go higher than <ChanceMax>
             # DamageModifier: Dodge damage will be divided by this modifier
             ChanceMax: 20.0
-            MaxBonusLevel: 80
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
             DamageModifier: 2.0
 
         Roll:
@@ -107,7 +109,9 @@ Skills:
             # MaxBonusLevel: On this level or higher, the roll chance will not go higher than <ChanceMax>
             # DamageThreshold: The max damage a player can negate with a roll, graceful roll doubles this number
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
             DamageThreshold: 7.0
     #
     #  Settings for Alchemy
@@ -117,7 +121,9 @@ Skills:
             # MaxBonusLevel: Maximum bonus level of Catalysis, when a player reaches this level his brewing speed will be <MaxSpeed>
             # MinSpeed: Minimum brewing speed allowed when at <UnlockLevel> or lower
             # MaxSpeed: Maximum brewing speed allowed when at <MaxBonusLevel> or higher
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
             MinSpeed: 1.0
             MaxSpeed: 4.0
     #
@@ -136,14 +142,18 @@ Skills:
             # MaxBonusLevel: Maximum bonus level of Daze, when a player reaches this level his chance of causing a daze will be <ChanceMax>
             # Modifier: Extra damage for arrows that cause a daze (2 damage = 1 heart)
             ChanceMax: 50.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
             BonusDamage: 4.0
 
         ArrowRetrieval:
             # ChanceMax: Maximum chance of retrieving arrows when on <MaxBonusLevel> or higher
             # MaxBonusLevel: Maximum bonus level for Arrow retrieval, at this level the chance of retrieving arrows from mobs is <ChanceMax>
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         # ForceMultiplier: Multiply the force of the bow by this for an XP boost.
         ForceMultiplier: 2.0
@@ -159,7 +169,9 @@ Skills:
             # ChanceMax: Maximum chance of causing a critical hit when on <MaxBonusLevel> or higher
             # MaxBonusLevel: Level where <ChanceMax> of causing critical hits is reached
             ChanceMax: 37.50
-            MaxBonusLevel: 75
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
             # Damage modifier of critical hits for PVP / PVE, when causing a critical hit the damage gets multiplied by the modifier
             PVP_Modifier: 1.5
             PVE_Modifier: 2.0
@@ -228,25 +240,33 @@ Skills:
             # ChanceMax: Maximum chance of GreenThumb when on <MaxBonusLevel> or higher
             # MaxBonusLevel: On this level, GreenThumb chance will be <ChanceMax>
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         DoubleDrops:
             # ChanceMax: Maximum chance of receiving double drops when on <MaxBonusLevel> or higher
             # MaxBonusLevel: Level when <ChanceMax> of receiving double drops is reached
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         HylianLuck:
             # ChanceMax: Maximum chance of Hylian Luck when on <MaxBonusLevel> or higher
             # MaxBonusLevel: On this level, Hylian Luck chance will be <ChanceMax>
             ChanceMax: 10.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         ShroomThumb:
             # ChanceMax: Maximum chance of ShroomThumb when on <MaxBonusLevel> or higher
             # MaxBonusLevel: On this level, ShroomThumb chance will be <ChanceMax>
             ChanceMax: 50.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
     #
     #  Settings for Mining
     ###
@@ -255,7 +275,9 @@ Skills:
             # ChanceMax: Maximum chance of receiving double drops when on <MaxBonusLevel> or higher
             # MaxBonusLevel: Level when <ChanceMax> of receiving double drops is reached
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         BlastMining:
             # BlastDamageDecrease Ranks: % of damage reduced from TNT explosions
@@ -320,13 +342,17 @@ Skills:
             # MaxBonusPercentage: Maximum bonus percentage for Repair Mastery
             # MaxBonusLevel: On this level, the maximum bonus is reached
             MaxBonusPercentage: 200.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         SuperRepair:
             # ChanceMax: Maximum chance of Super Repair when on <MaxBonusLevel> or higher
             # MaxBonusLevel: On this level, Super Repair chance will be <ChanceMax>
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         ArcaneForging:
             May_Lose_Enchants: true
@@ -388,18 +414,24 @@ Skills:
             # Multiplier: The furnace burn time will be multiplied by this value.
             # MaxBonusLevel: On this level, the efficiency multiplier will stop increasing
             Multiplier: 3.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         SecondSmelt:
             # ChanceMax: Maximum chance of triggering Second Smelt
             # MaxBonusLevel: On this level, the chance to cause Second Smelt will be <ChanceMax>
             ChanceMax: 50.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         FluxMining:
             # Chance: Chance for Flux Mining to activate
             Chance: 33.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         # VanillaXPMultiplier: Vanilla XP gained from smelting ores is multiplied by these values.
         VanillaXPMultiplier:
@@ -420,7 +452,9 @@ Skills:
             # ChanceMax: Maximum chance of triggering bleeding
             # MaxBonusLevel: On this level, the chance to cause Bleeding will be <ChanceMax>
             ChanceMax: 33.0
-            MaxBonusLevel: 20
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
             # DamagePlayer: Bleeding damage dealt to players
             # DamageMobs: Bleeding damage dealt to mobs
@@ -436,7 +470,9 @@ Skills:
             # ChanceMax: Maximum chance of triggering a counter attack
             # MaxBonusLevel: On this level, the chance to Counter will be <ChanceMax>
             ChanceMax: 30.0
-            MaxBonusLevel: 60
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
             # DamageModifier: Damaged caused by the damager will get divided by this modifier and dealt back to the damager
             DamageModifier: 2.0
@@ -454,7 +490,9 @@ Skills:
             # ChanceMax: Maximum chance of triggering gore
             # MaxBonusLevel: On this level, the chance to cause Gore will be <ChanceMax>
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
             # Modifier: Damage will get multiplied by this modifier
             Modifier: 2.0
         FastFoodService:
@@ -487,20 +525,26 @@ Skills:
             # MaxBonusLevel: Level when the maximum chance to disarm is reached
             # AntiTheft: Determines if only the disarmed player can retrieve disarmed items
             ChanceMax: 33.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
             AntiTheft: false
 
         ArrowDeflect:
             # ChanceMax: Maximum chance of deflecting arrows
             # MaxBonusLevel: Level when the maximum chance to deflect is reached
             ChanceMax: 50.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         IronGrip:
             # ChanceMax: Maximum chance of preventing being disarmed
             # MaxBonusLevel: Level when the maximum chance to prevent being disarmed is reached
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
 
         IronArmStyle:
             # BonusMin: Minimum bonus damage for unarmed
@@ -538,4 +582,6 @@ Skills:
             # ChanceMax: Maximum chance of receiving double drops (100 = 100%)
             # MaxBonusLevel: Level when the maximum chance of receiving double drops is reached
             ChanceMax: 100.0
-            MaxBonusLevel: 100
+            MaxBonusLevel:
+                Standard: 100
+                RetroMode: 1000
